# egui_ab_app2

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: icons.icns
backup_sources/: __main.rs.txt
scripts/: png2icns.sh
src/: dashboard.rs  main.rs  menu.rs  startup.rs  theme.rs  widgets.rs
